catalogue/istio/fault-injection.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: fault
spec:
  hosts:
    - catalogue.default.svc.cluster.local
  http:
    - fault:
        delay:
          percentage:
            value: 0.1
          fixedDelay: 5ms
        abort:
          httpStatus: 503
          percentage:
            value: 0.050
      route:
        - destination:
            host: catalogue
            subset: v1

---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: fault
spec:
  host: catalogue.default.svc.cluster.local
  trafficPolicy:
    outlierDetection:
      consecutive5xxErrors: 5
      interval: 10s
      baseEjectionTime: 30s
  subsets:
    - name: v1
      labels:
        version: v1
