catalogue/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: catalogue
spec:
  hosts:
    - catalogue
  http:
    - route:
        - destination:
            host: catalogue
            subset: v1
